@@ -1,9 +1,13 @@
-2010-12-29  Christian Kuuhn  <lolli@schwarzbuch>
+2010-12-30  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Added feature #16580: render-postProcess Hook in t3lib_PageRenderer::render() (Thanks to Morton Jonuschat)
+
+2010-12-29  Christian Kuuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #16849: [Unit tests] fixPermissions* tests rely on availability of posix_getegid() (Thanks to Steffen Gebert)
 	* Fixed bug #11286: Caching of pagesections uses superfluos serialize() call (Thanks to Rupert Germann)
 
-2010-12-28  Christian Kuuhn  <lolli@schwarzbuch>
+2010-12-28  Christian Kuuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #16840: Remove misc/ directory and deprecate t3lib_superadmin
 
